--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/iyf07/graduate-student-tracking-system#readme",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
     "sqlite3": "^5.1.4"
